fixed cors issue

--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,4 @@ JWT_SECRET="gs#secret"
 CLOUDINARY_CLOUD_NAME = 'ddwhf0smy'
 CLOUDINARY_API_KEY = '668249588398183'
 CLOUDINARY_API_SECRET = 'sRNIWxrJSi1Z4pKW9doyFqYdplU'
+FRONTEND_URL="https://qchat-flame.vercel.app"
